<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TTF</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

	<string name="ttf_1">AndroidClockMono-Thin.ttf</string>
	<string name="ttf_2">Roboto-Black.ttf</string>
	<string name="ttf_3">Roboto-BlackItalic.ttf</string>
	<string name="ttf_4">Roboto-Bold.ttf</string>
	<string name="ttf_5">Roboto-BoldItalic.ttf</string>
	<string name="ttf_6">Roboto-Italic.ttf</string>
	<string name="ttf_7">Roboto-Light.ttf</string>
	<string name="ttf_8">Roboto-LightItalic.ttf</string>
	<string name="ttf_9">Roboto-Medium.ttf</string>
	<string name="ttf_10">Roboto-MediumItalic.ttf</string>
	<string name="ttf_11">Roboto-Regular.ttf</string>
	<string name="ttf_12">Roboto-Thin.ttf</string>
	<string name="ttf_13">Roboto-ThinItalic.ttf</string>
	<string name="ttf_14">RobotoCondensed-Bold.ttf</string>
	<string name="ttf_15">RobotoCondensed-BoldItalic.ttf</string>
	<string name="ttf_16">RobotoCondensed-Italic.ttf</string>
	<string name="ttf_17">RobotoCondensed-Light.ttf</string>
	<string name="ttf_18">RobotoCondensed-LightItalic.ttf</string>
	<string name="ttf_19">RobotoCondensed-Regular.ttf</string>
	
	
</resources>
